3er tp,agrego img

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="copadionisio.ico" type="image/x-icon">
     <title>DIONISIO'S VINOTECA</title>
     <!--jonas y ailen hicieron el codigo inicial de la pagina-->
     <!--lautaro hizo el sketch-->
@@ -9,8 +11,12 @@
     <!--leiva el logo y nombre-->
 </head>
 <body>
+
     <header>
         <p>Este sitio web es sobre una vinoteca</p>
     </header>
+    <img src="./vino.jpg" alt="imagen de catalogo de vino">
+    <img src="./vino2.jpg" alt="imagen de vino"><br>
+    <a href="2do folio.html">ir a la otra pagina</a>
 </body>
 </html>
