--- a/2do folio.html
+++ b/2do folio.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>2do folio</title>
-    </head>
-    <body>
-    </body>
-    <h1>hola mundo </h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="copadionisio.ico" type="image/x-icon">
+    <title>DIONISIO'S VINOTECA</title>
+</head>
+<body>
+    <header>
+        <p>Segunda pagina</p>
+    </nav>
+    </header>
+    <h2 id="vinobl">Vinos Blancos:</h2>
+    <p>fotos de vinos y descripciones<br></p>
+    <h2 id="vinors">Vinos Rosados:</h2>
+    <p>fotos de vinos y descripciones<br></p>
+    <h2 id="vinott">Vinos Tinto:</h2>
+    <p>fotos de vinos y descripciones<br></p>
+</body>
 </html>
