--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <!--leiva el logo y nombre-->
 </head>
 <body>
-
     <header>
+    <nav>
+        <li>
+            <a href="2do folio.html">Vinos que disponemos</a>
+        </li>
+        <li><p>Para saber más sobre la historia de los vinos aquí:<a href="https://es.wikipedia.org/wiki/Historia_del_vino">Vinos</a></p></li>
+        <li><!--aqui va el interno una parte de lapagina-->
+            <a href="2do folio.html#vinors">Vinos Rosados</a>
+        </li>
+        <li></li>
         <p>Este sitio web es sobre una vinoteca</p>
+    </nav>
     </header>
     <img src="./vino.jpg" alt="imagen de catalogo de vino">
     <img src="./vino2.jpg" alt="imagen de vino"><br>
